# webnovel-writer

./: .gitignore  README.md  install.py  mcp_server.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude-plugin/: plugin.json
.claude/scripts/.webnovel/: state.json  vectors.db
.claude/scripts/data_modules/: index_manager.py  sql_state_manager.py  state_manager.py
.claude/skills/webnovel-write/: SKILL.md
.github/workflows/: main.yml
agents/: context-agent.md  data-agent.md  metadata-extractor.md  pacing-checker.md
commands/: webnovel-init.md  webnovel-plan.md  webnovel-query.md  webnovel-resume.md  webnovel-review.md  webnovel-write.md
references/: entity-management-spec.md
scripts/: archive_manager.py  context_manager.py.deprecated  context_pack_builder.py  extract_entities.py  init_project.py  status_reporter.py  token_budget_analyzer.py  update_state.py  workflow_manager.py
scripts/data_modules/: api_client.py  config.py  entity_linker.py  index_manager.py  rag_adapter.py  state_manager.py  style_sampler.py
scripts/data_modules/tests/: test_data_modules.py
skills/chapter-writing/: SKILL.md
skills/info-query/: SKILL.md
skills/info-query/references/: system-data-flow.md  tag-specification.md
skills/outline-planning/: SKILL.md
skills/project-init/: SKILL.md
skills/project-init/references/: system-data-flow.md
skills/quality-review/: SKILL.md
skills/quality-review/references/: common-mistakes.md  core-constraints.md
skills/task-resume/: SKILL.md
skills/task-resume/references/: system-data-flow.md  workflow-resume.md
