[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webnovel-writer"
version = "5.0.0"
description = "Chinese webnovel writing assistant with AI-powered workflow, anti-hallucination protocols (三大定律), cool-points strategy (爽点系统), and Strand Weave pacing control."
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "lcy"}
]
keywords = [
    "webnovel", "chinese", "writing", "网文", "小说",
    "workflow", "state", "git", "ai", "claude"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
    "Topic :: Artistic Software",
]
requires-python = ">=3.8"
dependencies = [
    "pypinyin>=0.44.0",
    "filelock>=3.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "mypy>=0.990",
]
mcp = [
    "mcp>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/lcy/webnovel-writer"
"Bug Tracker" = "https://github.com/lcy/webnovel-writer/issues"

[project.scripts]
webnovel-init = "scripts.init_project:main"
webnovel-update = "scripts.update_state:main"
webnovel-status = "scripts.status_reporter:main"
webnovel-index = "scripts.structured_index:main"
webnovel-extract = "scripts.extract_entities:main"
webnovel-context = "scripts.context_pack_builder:main"

[tool.setuptools]
packages = ["scripts", "scripts.data_modules"]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
"*" = [
    "*.md",
    "*.json",
    "templates/**/*",
    "genres/**/*",
    "skills/**/*",
    "commands/**/*",
    "agents/**/*",
    "references/**/*",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
